--- a/tourconnect-cn.html
+++ b/tourconnect-cn.html
@@ -21,92 +21,143 @@
         <div class="context">
 		    <div class="context_right">
                 <div class="tc_context_right_title">
-                    <h1>TourConnect</h1>
+                    <h1>优化注册体验</h1>
+                    <div class="tc_context_title tc_context_title_1"></div>
+                    <p>TourConnect 创建了一个全球旅游业的商业平台。在创立的一年多的时间里，积累了上万家家来自澳大利亚、美国等多个国家的旅游行业客户，帮助他们寻找新的业务合作伙伴。我的任务是为这个快速发展的创业公司进行产品迭代规划以及优化产品体验。</p><br>
+                    <p style="color:#999;font-size:1em;">为了遵守保密协议，我在本案例研究中混淆了部分机密信息。本案例研究中的所有信息都是我自己的观点，并不一定反映TourConnect的观点。</p>
                 </div>
-		    	<div class="tc_context_title tc_context_title_1"></div>
 		    	<div class="context_p">
-                    <span style="display:block;text-align:center;font-weight:600;font-size:1.25rem;">项目简介</span>
                     <div class="context_p_box tc_context_p_box">
-                        <h1>背景</h1>
-                         <p>TourConnect作为<em style="font-weight:900;">B2B</em>旅游业的商业社区，主要提供以下两项服务：<br>1）TourConnect帮助旅游业公司寻找新的业务合作伙伴。<br>2）TourConnect创造了电子合同工具来帮助旅游业公司建立和管理电子合同。<br><br>我的工作包括根据行业需求，设计新功能，并且对现有产品进行快速迭代，为用户提供更好的体验。我专注于简化产品流程和设计可行的解决方案，我负责的工作包括用户研究、产品分析、数据分析、产品设计和可用性测试。</p>
-		    	    </div>
-                    <div class="context_p_box tc_context_p_box">
-                        <h1>成果</h1>
-                        <p>· 新用户提高了大约5%注册转化率，老用户的信息完整比例提高了15%。</p>
-                        <p>· 显著的减少了客服的工作量。</p>
+                        <h2>我的角色</h2>
+                        <p>通过深入行业调研，分析产品数据和用户反馈，对现有产品进行快速迭代，为用户提供更好的体验。我专注于简化产品流程，设计针对性的解决方案。我负责的工作包括产品整体迭代规划、用户研究、产品分析、数据分析、产品设计和可用性测试。</em></p>
                     </div>
                     <div class="context_p_box tc_context_p_box">
-                        <h1>设计目标</h1>
-                        <p>· 在快速迭代的环境中，不断的解决用户的痛点，提高产品的可用性</p>
-                        <p>· 提高用户注册转化率</p>
+                        <h2>产品目标</h2>
+                        <p>· 不断的解决用户的痛点，提高产品的可用性，并快速迭代</p>
+                        <p>· 提高用户注册转化留存和付费率</p>
                         <p>· 减少客服的工作量</p>
                     </div>
                     <div class="context_p_box tc_context_p_box">
-                        <h1>设计挑战</h1>
-                        <p>· 如何深⼊了解目标⽤户、产品和行业需求，并提出可行的行业解决方案</p>
-                        <p>· 如何集成商业需求与用户需求</p>
+                        <h2>挑战</h2>
+                        <p>· 如何深⼊了解目标⽤户、产品和行业需求，并提出可行的设计解决方案</p>
+                        <p>· 如何平衡产品的商业需求与用户需求</p>
+                        <p>· 如何对产品进行迭代规划和设计。</p>
+                    </div>
+                    <div class="context_p_box tc_context_p_box">
+                        <h2>成果</h2>
+                        <p>· 注册转化率从0.7%上升至6%</p>
+                        <p>· 关于注册问题的客服请求减少了70%</p>
+                        <p>· 企业页面完整率提升了8%</p>
                     </div>
                 </div>
 
-                <div class="context_p" style="background:#fafafa;">
-                    <span style="display:block;text-align:center;font-weight:600;font-size:1.25rem;">设计过程</span>
+                <div class="context_p" style="background:#F4F6F7;">
                     <div class="context_p_box tc_context_p_box">
-                        <h1>了解产品与用户</h1>
-                        <b>总结用户反馈与用户投诉</b>
-                        <p>通过TourConnect记录的用户对话，反馈，投诉以及邮件，从用户角度总结出产品现阶段的问题存在于：<br>1. 用户很难找到新的业务伙伴。 <br>2. 产品可用性不佳。</p>
+                        <div style="text-align:center;"><span>开始</span></div>
+                        <h1>问题分类</h1>
+                        <p>由于当时的产品规划和任务不明确，所以我决定先从用户反馈开始着手，整理在线客服信息、用户反馈和投诉等。但是由于用户反馈信息杂乱，团队在产品方向上分歧较大，我决定将先从付费用户的反馈问题着手。</p>
+                    </div>
+                    <div class="context_full_box">        
                         <div class="tc_img tc_img_2"></div>
-                        <b>讨论现有用户旅行图(User Journey Map)</b>
-                        <p>与各个部门的同事协作并讨论现有的用户旅行图，从不同的角度发现想法与问题，帮助我们更好地了解产品流程，找到我们已经遇到的问题，观察并讨论造成问题的原因。</p>
-                        <div class="tc_img tc_img_3"></div>
-                        <b>整理用户数据</b>
-                        <p>整理了现有的用户类别和用户行为数据(Google Analytics) ，并通过online survey收集用户的目标，这些数据可以更好地帮助我们了解现有的用户。</p>
-                        <div class="tc_img tc_img_1"></div>
+                    </div>
+                    <div class="context_p_box tc_context_p_box">
+                        <h1>付费用户的产品功能需求</h1>
+                        <p>现有付费用户使用TourConnect的主要目的是寻找新的业务合作伙伴，我们决定先从搜索功能和搜索结果上着手。我带领团队对8家付费企业进行了采访，我们采访的目标是了解他们日常使用中遇到的阻力，以及他们会采取的应对方法。</p>
+                        <div class="tc_img tc_img_0"><div class="tc_right"><span style="font-size: 1.25rem;font-weight: 400;">搜索结果准确性差</span><br><b style="font-size: 1rem;font-weight: 300;color: #666;">用搜索页面的功能单一，搜索的结果准确性较差，企业找不到合适的业务伙伴，增加了用户流失的可能。</b></div></div>
+                        <div class="tc_img tc_img_14"><div class="tc_right"><span style="font-size: 1.25rem;font-weight: 400;">打断用户</span><br><b style="font-size: 1rem;font-weight: 300;color: #666;">从搜索页面到搜索结果再到搜索结果细节，三次页面跳转打断用户。更换搜索条件需要回到上一页，搜索体验较差。</b></div></div>
+                        <div class="tc_img tc_img_15"><div class="tc_right"><span style="font-size: 1.25rem;font-weight: 400;">搜索结果信息缺失</span><br><b style="font-size: 1rem;font-weight: 300;color: #666;">搜索结果无法被用户直接使用。许多付费企业得到信息后，还得通过网上搜索，才能得到想要的信息，这个过程让用户感到无奈和失望。</b></div></div>
                     </div>
                 </div>
 
                 <div class="context_p">
                     <div class="context_p_box tc_context_p_box">
-                        <h1>快速迭代，持续反馈</h1>
-                        <b>搜索功能的改进</b>
-                        <p>在总结用户的反馈与投诉中，大量的矛头指向了这样的一句话--“我很难去找到一个业务上的合作伙伴，我觉得这样的产品对我们公司来说，是无用的”。现有的产品在搜索功能上有所欠缺，由于没有filter或者sort的功能，单一的搜索并不能满足用户的需求。根据前期对用户数据的整理，我决定加入filter跟sort的功能。</p>
+                        <div style="text-align:center;"><span>尝试</span></div>
+                        <h1>优化搜索功能</h1>
+                        <p>现有的产品搜索功能单一，不能满足用户的需求。根据收集到的用户采访信息和反馈，我对搜索功能进行快速迭代。</p><br>
+                        <p>1. 我优化了搜索条件，帮助用户获得更精准的搜索结果。其次，根据旅游行业商业需求特性，90%以上的买家会在搜索前，在特定区域范围搜索，所以我将搜索结果视觉化，帮助用户快速判断可用信息。</p>
+                        <p>2. 删减不必要的信息，只显示可以帮助用户快速判断的信息。</p>
+                        <p>3. 根据行业习惯，加入预约会议功能，对方接受后自动添加企业好友，能够让双方更快速、高效的建立商务联系，而并不仅仅只是增加一个“好友”。</p>
+                        <p>4. 使用左右排版设计，从用户角度看，方便用户实时修改并得到实时反馈信息。从产品角度看，为后期更新迭代，留下了可宽展空间。</p>
+                    </div>
+                    <div class="context_full_box">        
                         <div class="tc_img tc_img_11"></div>
-                        <b>搜索功能改进后的用户反馈</b>
-                        <p>改动后的反馈并没有我们想的那么美好，用户的主要痛点并没有被解决。每天依然会有大量的用户需求客服的帮助。虽然搜索功能的改进确实在一定程度上帮助用户实现他们的目标，但是我们并没有真的抓住主要的痛点。</p>
+                    </div>
+                    <div class="context_p_box tc_context_p_box">
+                        <h1>用户需求≠产品需求</h1>
+                        <p>优化搜索后，我们对这8家企业进行了回访，他们对搜索的优化给予了一致的好评，虽然优化搜索功能一定程度上解决了部分付费用户的问题，但是面对现实的数据和客服反馈，我们意识到，这次的改版并没有抓住最主要的产品需求。</p>
                     </div>
                 </div>
+
+                <div class="context_p" style="background:#F4F6F7;">
+                    <div class="context_p_box tc_context_p_box">
+                        <div style="text-align:center;"><span>更深入的见解</span></div>
+                        <h1>从数据中寻找突破</h1>
+                        <p>我回顾了前期的工作，因为太注重用户反馈以致于我忽略了数据信息。我与我们的数据工程师合作，建立多个数据监测模型，挖掘有价值的数据。</p><br>
+                        <p>例如，用户留存模型、产品品使用率、数据沉淀比例等。</p><br>
+                        <p>我们找到了两个关键问题：</p>
+                    </div>
+                    <div class="context_p_box tc_context_p_box">
+                        <div class="tc_img tc_img_1"><div class="tc_right"><span style="font-size: 1.25rem;font-weight: 400;">我们在第一步就丢失了用户</span><br><b style="font-size: 1rem;font-weight: 300;color: #666;">注册页流失了率高达65%的用户。新用户对TourConnect产品感兴趣才会点击注册，但跳出率非常高，原因值得深挖。</b></div></div>
+                        <div class="tc_img tc_img_16"><div class="tc_right"><span style="font-size: 1.25rem;font-weight: 400;">空白的企业信息</span><br><b style="font-size: 1rem;font-weight: 300;color: #666;">只有16%的活跃用户，企业信息完成度超过90%。也就是说，用户在搜索业务合作伙伴时，搜索到的是一张空白企业名片。</b></div></div>
+                    </div>
+                    <div class="context_p_box tc_context_p_box">
+                        <h1>从流程中挖掘痛点</h1>
+                        <p>和团队讨论，梳理产品的流程，寻找产品使用过程中的体验痛点。</p>
+                    </div>
+                    <div class="context_p_box tc_context_p_box">
+                        <div class="tc_img tc_img_17"><div class="tc_right"><span style="font-size: 1.25rem;font-weight: 400;">需求不同</span><br><b style="font-size: 1rem;font-weight: 300;color: #666;">用户带着不同的目的从不同的渠道进入，每个用户对于TourConnect的产品和功能需求也不相同。</b></div></div>
+                        <div class="tc_img tc_img_3"><div class="tc_right"><span style="font-size: 1.25rem;font-weight: 400;">流程不灵活</span><br><b style="font-size: 1rem;font-weight: 300;color: #666;">新用户必须完成所有注册信息，才能接触TourConnect的核心功能，我猜测这是造成用户留存低的原因之一。</b></div></div>
+                    </div>
+                </div>
+            </div>
 
                 <div class="context_p">
                     <div class="context_p_box tc_context_p_box">
-                        <h1>深入研究</h1>
-                        <b>寻找问题的根源</b>
-                        <p>吸取了第一次改进的教训，为了进一步弄清楚用户的痛点，我进行了多次用户访谈，并对我们的产品进行了多次可用性测试。结合以前的分析，我们发现了这样的问题：<br>首先，用户找不到业务上的伙伴并不是因为搜索结果导致的，而是我们有许多用户的企业的profile页面信息缺失，用户无法了解企业的业务，所以找不到有效的业务伙伴。其次，用户点击注册后，由于TourConnect产品的企业分类不清晰，繁琐的onboard步奏，不友好的交互设计等等，导致了用户在一开始的注册环节，就放弃了填写最重要的企业profile信息。尽管TourConnect有营销邮件推送，提醒用户去完善他们的企业profile信息，但是由于陈旧的视觉设计，使得用户误以为是垃圾邮件。以上种种原因，使得TourConnect产品没有满足用户的需求，导致了用户的流失。<br>以上的原因导致了准新用户流失严重(新用户只点击注册，但没有完成注册信息，并不算完成注册转化)，老用户搜索后得到的都是企业空白页面的关键原因。</p>
-                        <div class="tc_img tc_img_6"></div>
-                        <b>需要解决的问题</b>
-                        <p>· 通过团队的协作与用户访谈，从商业与用户角度分别列出企业的分类，总结两者的结论，得出一个清晰易懂的企业分类。</p>
-                        <p>· 从商业与UX的双重角度去简化并重新设计用户注册的流程。</p>
-                        <p>· 不断的与团队进行交流协作，确保团队没有遗漏或者忽略任何信息。</p>
-                        <p>· 确定设计语言，统一设计风格。</p>
+                        <div style="text-align:center;"><span>重塑问题</span></div>
+                        <h1>从 1 到 0</h1>
+                        <p>深入研究数据揭示了对产品使用体验的一些重要见解。几乎所有的用户反馈都直接或者间接的反应了现有的注册流程问题，例如注册流程用户流失率高，例如企业信息完整率低，和用户寻求客服帮助如何填写信息。这些数据显示，这样的注册体验会间接影响后期用户的使用。</p><br><br>
+                        <h3 style="text-align:center; font-size:1.5rem; color:#00BCD4;">“我们如何帮助用户制定更好的注册流程？”</h3><br><br>
+                        <p>我们如何帮助有着不同目的的用户制定更好的产品体验计划？我的提议是根据不同的用户类型和目的，创建符合用户需求的产品体验。对注册流程进行整体优化，缩短用户到核心功能的路径。</p>
                     </div>
-                </div>
-
-                <div class="context_p" style="background:#fafafa;">
+                </div>   
+                
+                <div class="context_p" style="background:#F4F6F7;"> 
                     <div class="context_p_box tc_context_p_box">
-                        <h1>改进产品的体验</h1>
-                        <p>经过多次的构思和讨论，我们最终确定了改进方向。</p>
-                        <b>新的用户旅行图</b>
-                        <p>细化用户的任务，信息与操作，简化从注册到onboard的步奏，从最开始的6个步骤减少到了3个步骤。</p>
-                        <div class="tc_img tc_img_4"></div>
-                        <b>用户细分</b>
-                        <p>将用户划分为4类以及7种不同的使用场景。根据用户注册时回答的问题(关于用户使用我们产品的目的)，为不同目标的用户提供相应的用户流程。</p>
+                        <div style="text-align:center;"><span>注册流程重新设计</span></div>
+                        <h1>从 0 到 1</h1>
+                        <p>通过以下问题，我定义了设计策略。</p><br>
+                        <p>1. 如何让用户分类更细致？</p>
+                        <p>2. 如何规划注册流程，满足每一个用户类？</p>
+                        <p>3. 哪些因素会影响注册流程？</p>
+                        <p>4. 如何规划标准化的注册流程？</p><br>
+                        <h1>优化用户分类</h1>
+                        <p>为了对现有用户分类进行优化，我带领团队进行了行业调研。通过与资深从业者不断的沟通，使用卡片分类法等方法，不断归纳总结。通过在线问卷，快速验证新户分类的有效性。</p>
+                    </div>
+                    <div class="context_full_box">        
+                        <div class="tc_img tc_img_18"></div>
+                    </div>
+                    <div class="context_p_box tc_context_p_box">
+                        <h1>减法</h1>
+                        <p>对现有注册信息整合、重新组合并排序，缩短了用户从注册流程到核心功能的步骤。</p>
+                    </div>
+                    <div class="context_full_box">        
+                        <div class="tc_img tc_img_5"></div>
+                    </div>
+                    <div class="context_p_box tc_context_p_box">
+                        <h1>从准确到精确</h1>
+                        <p>针对用户类型不同、目标不同和入口不同的情况，创建符合对应需求的产品流程，我们的最终目的是帮助用户快速完成他们的使用目标，可以有效降低新用户流失风险。</p>
+                    </div>
+                    <div class="context_full_box">        
                         <div class="tc_img tc_img_8"></div>
-                        <b>为不同的入口定制用户流程</b>
-                        <p>为来自不同入口的新用户定制相应的流程，可以帮助新用户快速的达到他们的目的。</p>
-                        <div class="tc_img tc_img_13"></div>
-                        <b>引导用户操作</b>
-                        <p>通过引导框设计，引导用户完成从注册到企业profile的信息输入，提高产品的易用性。后期的可用性测试结果显示：引导框的设计可以有效的帮助用户完成信息的输入。</p>
-                        <div class="tc_img tc_img_12"></div>
-                        <b>邮件的改进</b>
-                        <p>首先，使用material design设计语言，简化邮件内容，加入鼓励用户的文字“Please take few minutes to complete your company information, you can find more business partners.”。并且，使用邮件追踪工具，追踪用户会在何时何地打开邮件，以便以后更有效的推送营销邮件。</p>
+                        <div class="tc_img tc_img_6"></div>
+                    </div>
+                    <div class="context_p_box tc_context_p_box">
+                        <h1>降低新流程的风险</h1>
+                        <p>对产品流程优化的依据，来源于用户的“说”和部分数据，所以我会担心新流程的有效性。为了降低风险，我对美国达拉斯和澳大利亚珀斯的用户进行了早期的原型测试。新的流程和参与者产生了良好的共鸣，证实了我们对流程的优化设计是有效的。</p><br><p>在测试中，我们发现了一些忽略的细节，随后我们对这些细节进行了策略调整。</p>
+                    </div>
+                    <div class="context_p_box tc_context_p_box">
+                        <div class="tc_img tc_img_12"><div class="tc_right"><span style="font-size: 1.25rem;font-weight: 400;">引导策略</span><br><b style="font-size: 1rem;font-weight: 300;color: #666;">B端产品的具有一定的复杂性，用户需要在适当的阶段被引导，帮助他们快速达到使用产品的目的。</b></div></div>
+                        <div class="tc_img tc_img_13"><div class="tc_right"><span style="font-size: 1.25rem;font-weight: 400;">邮件策略</span><br><b style="font-size: 1rem;font-weight: 300;color: #666;">优化邮件推送策略，可以有效提醒用户。加入邮件数据统计工具，更有效的推送营销邮件。</b></div></div>
                     </div>
                 </div>
 
@@ -122,7 +173,7 @@
                     </div>
                 </div>
 
-                <div class="context_p" style="background:#fafafa;">
+                <div class="context_p" style="background:#F4F6F7;">
                     <div class="context_p_box tc_context_p_box">
                         <h1>最终的视觉设计</h1>
                         <p>使用material design作为设计规范，在交付过程中，我与工程师团队密切合作，以确保交付的产品与设计保持一致。</p>
@@ -130,14 +181,13 @@
                     </div>
                 </div>
 
-                <div class="context_p" style="margin-bottom:5%;">
+                <div class="context_p">
                     <div class="context_p_box tc_context_p_box">
-                        <h1>下一步的工作</h1>
-                        <p>1. 不断收集用户反馈，对产品进行快速迭代。</p>
-                        <p>2. 使用material design作为设计规范，对产品的其他部分进行视觉上的改进。</p>
-                        <p>3. 定期与用户，管理层交流，开发新的产品功能。</p>
+                        <div style="text-align:center;"><span>影响</span></div>
+                        <h1>有效的结果和下步的工作</h1>
+                        <p>新的注册流程在重新设计后被发布，令人欣慰的是，全新的注册流程产生了积极影响。用户转化率提高了5%，关于注册问题的客服请求减少了70%。但是，老用户的企业页面完成率没有显着上升，这意味着新用户也许又会遇到空白的企业页面。不过我相信随着用户量的增加，这样的老用户会被慢慢的忽略。</p>
                     </div>
-                </div>
+                </div>  
 
 
 		    </div>
